2008-12-28  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/query-coding-tests.el: 
	Add tests for #'unencodable-char-position,
	#'check-coding-systems-region, #'encode-coding-char. Remove some
	debugging statements.

2008-12-28  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/query-coding-tests.el: 
	New file, testing the functionality of #'query-coding-region and
	#'query-coding-string.

2008-09-27  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add test for at_dot regexp.

2008-09-27  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: `with-string-as-buffer-contents'
	leaves point at end of buffer, so must move point to beginning.

2008-08-27  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/regexp-tests.el: 
	Add a few basic #'skip-chars-forward, #'skip-chars-backward
	tests. 

2008-08-10  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el (featurep): Update the list of character
	sets in etc/HELLO to reflect that we've deleted the
	XEmacs-specific Arabic character sets.

2008-05-21  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el (featurep): 
	Make sure that working symlinks are available before testing
	their functionality.
	Also, don't bomb out on deleting the other temporary files if
	deleting the first threw an error. 

2008-02-14  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/case-tests.el (let):
	Correct and extend the previous test, thank you Stephen. 

2008-02-11  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/case-tests.el (Assert): 
	New test case; thank you Michael Sperber. 

2008-01-30  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/case-tests.el (pristine-case-table): 
	New var, reflecting the standard case table before case-table.el
	messes with it. 
	* automated/case-tests.el: 
	Call Skip-Test-Unless correctly, following Vin's report of
	20a807210801300635v7533d26rdb32a8d82fb4239b@mail.gmail.com . 
	Use pristine-case-table, add in a couple more tests.